Fixed vertical align issues in vanya css style

--- a/vanya-style.css
+++ b/vanya-style.css
@@ -7,7 +7,7 @@
 }
 
 #challenges {
-  vertical-align:center;
+  vertical-align: middle;
 }
 
 .reveal section img {
@@ -32,7 +32,7 @@
 }
 
 .center-vert {
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .left-text {
